--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -2,37 +2,73 @@
   cursor: pointer;
 }
 
-.overlay{
-  background-color:#EEE;
-}
+/*.overlay{*/
+  /*background-color:#EEE;*/
+/*}*/
 
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
+/*.node circle {*/
+  /*fill: #fff;*/
+  /*stroke: steelblue;*/
+  /*stroke-width: 3px;*/
+/*}*/
+
+/*.node text {*/
+  /*font-size:10px;*/
+  /*font-family:sans-serif;*/
+/*}*/
+
+/*.link {*/
+  /*fill: none;*/
+  /*stroke: #ccc;*/
+  /*stroke-width: 1.5px;*/
+/*}*/
+
+/*.templink {*/
+  /*fill: none;*/
+  /*stroke: red;*/
+  /*stroke-width: 3px;*/
+/*}*/
+
+/*.ghostCircle.show{*/
+  /*display:block;*/
+/*}*/
+
+/*.ghostCircle, .activeDrag .ghostCircle{*/
+  /*display: none;*/
+/*}*/
+
+
+line.link {
+  fill: none;
+  stroke: #9ecae1;
   stroke-width: 1.5px;
 }
 
 .node text {
-  font-size:10px;
-  font-family:sans-serif;
+  font: 10px sans-serif;
+  pointer-events: none;
 }
-
-.link {
+circle.node {
+  cursor: pointer;
+  stroke: #3182bd;
+  stroke-width: 1.5px;
+}
+line.link {
   fill: none;
-  stroke: #ccc;
+  stroke: #9ecae1;
+  stroke-width: 1.5px;
+}
+.background {
+  stroke: gray;
+  stroke-width: 1px;
+  fill: white;
+}
+.node {
+  stroke: #fff;
   stroke-width: 1.5px;
 }
 
-.templink {
-  fill: none;
-  stroke: red;
-  stroke-width: 3px;
-}
-
-.ghostCircle.show{
-  display:block;
-}
-
-.ghostCircle, .activeDrag .ghostCircle{
-  display: none;
+.spike {
+  fill: url(#SpikeGradient);
+  stroke-width: 0;
 }
