--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -38,16 +38,6 @@
 /*}*/
 
 
-line.link {
-  fill: none;
-  stroke: #9ecae1;
-  stroke-width: 1.5px;
-}
-
-.node text {
-  font: 10px sans-serif;
-  pointer-events: none;
-}
 circle.node {
   cursor: pointer;
   stroke: #3182bd;
@@ -58,17 +48,22 @@ line.link {
   stroke: #9ecae1;
   stroke-width: 1.5px;
 }
-.background {
-  stroke: gray;
-  stroke-width: 1px;
-  fill: white;
-}
-.node {
-  stroke: #fff;
-  stroke-width: 1.5px;
-}
+/*line.link {*/
+  /*fill: none;*/
+  /*stroke: #9ecae1;*/
+  /*stroke-width: 1.5px;*/
+/*}*/
+/*.background {*/
+  /*stroke: gray;*/
+  /*stroke-width: 1px;*/
+  /*fill: white;*/
+/*}*/
+/*.node {*/
+  /*stroke: #fff;*/
+  /*stroke-width: 1.5px;*/
+/*}*/
 
-.spike {
-  fill: url(#SpikeGradient);
-  stroke-width: 0;
-}
+/*.spike {*/
+  /*fill: url(#SpikeGradient);*/
+  /*stroke-width: 0;*/
+/*}*/
